# design_patterns

./: .gitignore  README.md
10_Gumball_Machine/: CMakeLists.txt  main.cpp
11_Proxies/: CMakeLists.txt  main.cpp
11_Proxies/include/: GumballMachine.h  GumballMonitor.h  NoQuarterState.h  SoldOutState.h  State.h
11_Proxies/src/: GumballMachine.cpp  NoQuarterState.cpp  SoldOutState.cpp
12_Compound/: CMakeLists.txt  main.cpp
12_Compound/include/: AbstractDuckFactory.h  CountingDuckFactory.h  DuckCall.h  DuckFactory.h  Flock.h  Goose.h  GooseAdapter.h  MallardDuck.h  QuackCounter.h  Quackable.h  RedHeadDuck.h  RubberDuck.h
12_Compound/src/: QuackCounter.cpp
1_SimUDuck/: CMakeLists.txt  MiniDuckSimulator.cpp
1_SimUDuck/include/: Duck.hpp  FlyBehavior.hpp  FlyNoWay.hpp  FlyWithWings.hpp  MallardDuck.hpp  MuteQuack.hpp  Quack.hpp  QuackBehavior.hpp  Squeak.hpp
1_SimUDuck/src/: MallardDuck.cpp
2_Weather-o-Rama/: CMakeLists.txt  main.cpp
2_Weather-o-Rama/include/: CurrentConditionsDisplay.hpp  DisplayElement.hpp  HeatIndexDisplay.hpp  Observer.hpp  Subject.hpp  WeatherData.hpp
2_Weather-o-Rama/src/: CurrentConditionsDisplay.cpp  HeatIndexDisplay.cpp  WeatherData.cpp
3_Starbuzz/: CMakeLists.txt  main.cpp
3_Starbuzz/include/: Beverage.hpp  CondimentDecorator.hpp  DarkRoast.hpp  Decaf.hpp  Espresso.hpp  HouseBlend.hpp  Mocha.hpp  Size.hpp  Soy.hpp  SteamedMilk.cpp  Whip.hpp
4_PizzaStore/: CMakeLists.txt  PizzaTestDrive.cpp
4_PizzaStore/include/: ChicagoPizzaStore.hpp  ChicagoStyleCheesePizza.hpp  NYPizzaStore.hpp  NYStyleCheesePizza.hpp  Pizza.hpp  PizzaStore.hpp
4_PizzaStoreExtended/: CMakeLists.txt  PizzaTestDrive.cpp
4_PizzaStoreExtended/include/: Cheese.hpp  CheesePizza.hpp  ChicagoPizzaIngredientFactory.hpp  Dough.hpp  MarinaraSauce.hpp  MozzarellaCheese.hpp  NYPizzaIngredientFactory.hpp  NYPizzaStore.hpp  ParmesanCheese.hpp  Pizza.hpp  PizzaIngredientFactory.hpp  PizzaStore.hpp  Sauce.hpp  ThickCrustDough.hpp  ThinCrustDough.hpp
5_Choc-O-Holic/: CMakeLists.txt  main.cpp
5_Choc-O-Holic/include/: ChocolateBoiler.hpp
6_HomeAutomationOrBust/: CMakeLists.txt  Diner.cpp  RemoteControlTest.cpp
6_HomeAutomationOrBust/include/: CeilingFan.hpp  CeilingFanHighCommand.hpp  Command.hpp  GarageDoor.hpp  GarageDoorOpenCommand.hpp  Light.hpp  LightOffCommand.hpp  LightOnCommand.hpp  MacroCommand.hpp  NoCommand.hpp  RemoteControl.hpp  SimpleRemoteControl.hpp
6_HomeAutomationOrBust/lambda/: Cook.hpp  Customer.hpp  Waitress.hpp
7_HomeSweet/: CMakeLists.txt  main.cpp
7_HomeSweet/include/: Duck.hpp  HomeTheaterFacade.hpp  MallardDuck.hpp  Turkey.hpp  TurkeyAdapter.hpp  WildTurkey.hpp
8_Beverage/: CMakeLists.txt  main.cpp
8_Beverage/include/: CaffeineBeverage.hpp  Coffee.hpp  Tea.hpp
9.5_Composite/: CMakeLists.txt  main.cpp
9.5_Composite/include/: Menu.hpp  MenuComponent.hpp  MenuItem.hpp  Waitress.hpp
9_Iterator/: CMakeLists.txt  main.cpp
9_Iterator/include/: CafeMenu.hpp  CafeMenuIterator.hpp  DinerMenu.hpp  DinerMenuIterator.hpp  Iterator.hpp  Menu.hpp  MenuItem.hpp  PancakeHouseMenu.hpp  PancakeHouseMenuIterator.hpp  Waitress.hpp
